# cpp-work-stealing-pool

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  DESIGN.md  Dockerfile  README.md
bench/: benchmark.cpp
demo/: demo.cpp
docs/: OPTIMIZATION.md  PHASE_REPORTS.md
eval/: evaluate.cpp
include/wsp/: chase_lev_deque.hpp  global_queue_pool.hpp  intrusive_deque.hpp  task.hpp  thread_pool.hpp  work_stealing_pool.hpp
scripts/: run_eval.sh  run_sanitizers.sh
src/: global_queue_pool.cpp  work_stealing_pool.cpp
tests/: test_chase_lev_deque.cpp  test_global_queue_pool.cpp  test_intrusive_deque.cpp  test_work_stealing_pool.cpp
